fix: change label position on mobile layout
Agora label está mais ao centro do input no layout mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -169,6 +169,6 @@ body {
 
   .field__label {
     left: 10px;
-    top: 10px;
+    top: 12px;
   }
 }
